Started complete rework using maven-xtext-example